--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -1,1 +1,171 @@
+- name: Kristina Klein
+  img:
+  category:
+  position:
+  bio: ""
+  mail: kristina.klein@okfn.de
+  twitter:
+  website:
+
+- name: Helene Hahn
+  img:
+  category:
+  position:
+  bio: ""
+  mail:
+  twitter: pluscha
+  website:
+
+- name: Anja Jentzsch
+  img:
+  category:
+  position:
+  bio: ""
+  mail: anja.jentzsch@okfn.org
+  twitter: anjeve
+  website:
+
+- name: Julia Kloiber
+  img:
+  category:
+  position:
+  bio: ""
+  mail: julia.kloiber@okfn.org
+  twitter: j_kloiber
+  website:
+
+- name: Daniel Mietchen
+  img:
+  category:
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
+
+- name: Maria Reimer
+  img:
+  category:
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
+
+- name: Katharina Meyer
+  img:
+  category:
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
+
+- name: Fiona Krakenbürger
+  img:
+  category:
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
+
+- name: Walter Palmetshofer
+  img:
+  category:
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
+
+- name: Daniel Dietrich
+  img:
+  category: Vorstand
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
+
+- name: Friedrich Lindenberg
+  img:
+  category: Vorstand
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
+
+- name: Christian Heise
+  img:
+  category: Vorstand
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
+
+- name: Claudia Schwegmann
+  img:
+  category: Vorstand
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
+
+- name: Stefan Wehrmeyer
+  img:
+  category: Vorstand
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
+
+- name: Dr. Marcus Dapp
+  img:
+  category: Vorstand
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
+
+- name: Andreas Pawelke
+  img:
+  category: Vorstand
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
+
+- name: Prof. Dr. Sören Auer
+  img:
+  category:
+  position:
+  io: ""
+  mail:
+  twitter:
+  website:
+
+- name: Rufus Pollock
+  img:
+  category:
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
+
+- name: Friedrich Schumann
+  img:
+  category:
+  position:
+  bio: ""
+  mail:
+  twitter:
+  website:
 
