Add example blog post style

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -133,7 +133,7 @@ Friedrich Lindenberg:
   github: pudo
 
 Christian Heise:
-  img:
+  img: christianheise
   staff: no
   board: yes
   advisory: no
