--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -127,10 +127,10 @@
   board: 1
   advisory: no
   position: Beisitzer
-  bio: ""
+  bio: "Christian Heise ist Politologe und wissenschaftlicher Mitarbeiter am Hybrid Publishing Lab im Centre for Digital Cultures an der Leuphana Universität Lüneburg, wo er zum Thema Open Science promoviert. Zuvor war er als Manager bei der Deutschen Presse Agentur und bei ZEIT ONLINE tätig. Neben seiner ehrenamtlichen Tätigkeit im Vorstand der Open Knowledge Foundation ist er auch Gründungs- und Vorstandsmitlgied im Förderverein für freie Netzwerke e.V. (freifunk.net). Christian redet gern und schreibt viel über seine Schwerpunktthemen: Open (Government) Data, Open Government, Open Science und Open Networks. Mehr auf christianheise.de."
   mail: christian.heise@okfn.org
   twitter: christianheise
-  website:
+  website: https://christianheise.de
 
 - name: Claudia Schwegmann
   img:
